Update hibernate validator dependency group and version. Upgrade jetty version. Initial merge of swagger changes from master. Merge changes to recover module..